--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,4 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 homework/hw0/data/hw0_dataset_1M.csv
+homework/hw0/tmp.csv
